--- a/views/food/edit.ejs
+++ b/views/food/edit.ejs
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="/../styles.css">
   </head>
-  <body>
+  <body class="food-edit-body">
     <%- include ('../partials/nav.ejs') %>
     <div class="container">
       <div class="add-dish">
