--- a/views/food/index.ejs
+++ b/views/food/index.ejs
@@ -13,7 +13,7 @@
     <div class="index-container">
       <% for (let i = 0; i < foods.length; i++) { %>
           <div class="index-cards">
-            <h3 class=index-name><%= foods[i].name %></h3>
+            <a class = "index-name" href="/foods/<%= foods[i].id %>"><%= foods[i].name %></a>
             <a href="/foods/<%= foods[i].id %>"><img class="index-img" src="<%= foods[i].img %>" alt="<%=foods[i].name%>"></a>
           </div>
       <% } %>
