--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -32,18 +32,19 @@
             <input type="submit" value="Log Out">
           </form>
         </li>
+        <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
+          <ul class=dropdown-content>
+            <li><a href="#">About Caju</a></li>
+            <li><a href="/foods/new">Add New Dish</a></li>
+            <li><a href="/mealplans/new">Create a Meal Plan</a></li>
+            <li><a href="/mealplans/">See Your Meal Plans</a></li>
+          </ul>
+        </li>
     <%}
       else {%>
         <li><a href="/users/new">Sign Up</a></li>
         <li><a href="/sessions/new">Log In</a></li>
     <%}%>
-    <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
-      <ul class=dropdown-content>
-        <li><a href="#">About Caju</a></li>
-        <li><a href="/foods/new">Add New Dish</a></li>
-        <li><a href="/mealplans/new">Create a Meal Plan</a></li>
-        <li><a href="/mealplans">See Your Meal Plans</a></li>
-      </ul>
-    </li>
+
   </ul>
 </nav>
