--- a/views/mealplans/index.ejs
+++ b/views/mealplans/index.ejs
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
-    <link rel="stylesheet" href="../styles.css">
+    <link rel="stylesheet" href="/../styles.css">
   </head>
   <body class="plans-body">
     <%- include ('../partials/nav.ejs') %>
@@ -16,10 +16,10 @@
                 let month = date.getMonth()
                 let year = date.getFullYear()
                 let fullDate = (`${month}/${day}/${year}`) %>
-                <h1><a href="/mealplans/<%=plans[i].id%>"><%= fullDate %></a></h1>
+                <h1><a href="/mealplans/<%=plans[i].id%>/edit"><%= fullDate %></a></h1>
               </div>
               <form class='form-flex' action="/mealplans?_method=DELETE" method="post">
-                <a href="/mealplans/edit">Edit</a>
+                <a href="/mealplans/<%=plans[i].id%>/edit">Edit</a>
                 <input type="hidden" name="id" value="<%=plans[i].id%>">
                 <input type="submit" value="Delete">
               </form>
@@ -45,7 +45,7 @@
                   <%}%>
                 </div>
               </div>
-              <form class="form" action="/mealplans/note/edit?_method=PUT" method="post">
+              <form class="form" action="/mealplans/note/quick/edit?_method=PUT" method="post">
                 <input type="hidden" name="id" value="<%=plans[i].id%>">
                 <textarea id="textarea" name="notes"></textarea>
                 <div class="submit">
