--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -5,7 +5,7 @@
     <title></title>
     <link rel="stylesheet" href="/../styles.css">
   </head>
-  <body>
+  <body class="body-create-plan">
     <%- include ('../partials/nav.ejs') %>
     <div class="container">
       <div class="add-dish">
