--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -34,7 +34,7 @@
         </li>
         <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
           <ul class=dropdown-content>
-            <li><a href="#">About Caju</a></li>
+            <li><a href="/foods/about/caju">About Caju</a></li>
             <li><a href="/foods/new">Add New Dish</a></li>
             <li><a href="/mealplans/new">Create a Meal Plan</a></li>
             <li><a href="/mealplans/">See Your Meal Plans</a></li>
