--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -20,10 +20,8 @@
         <label for="color">Pick a Color:</label>
         <select name="color">
           <option>red</option>
-          <option>forest green</option>
-          <option>tyrian</option>
-          <option>amaranth</option>
-          <option>sandstone</option>
+          <option>yellow</option>
+          <option>orange</option>
         </select>
         <input type="submit" value="Submit">
       </form>
