--- a/public/styles.css
+++ b/public/styles.css
@@ -334,7 +334,7 @@ nav a:hover {
 }
 
 .body-create-plan {
-  background-image: url(https://i.imgur.com/EcHDl3K.jpg);
+  background-image: url(https://i.imgur.com/6Imlz07.jpg);
   background-size: cover;
 }
 
