--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -9,7 +9,7 @@
         <%}
         else if (currentUser.color === 'yellow') { %>
           <div class="logo">
-            <a href="/foods"><img src="https://i.imgur.com/FCFvq1M.png" alt="logo"></a>
+            <a href="/foods"><img src="https://i.imgur.com/4FYvbih.png" alt="logo"></a>
             <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
           </div>
         <% }
