--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -40,7 +40,7 @@
         </li>
         <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
           <ul class=dropdown-content>
-            <li><a href="/foods/about/caju">About Caju</a></li>
+            <li><a href="/foods/about/caju/app">About Caju</a></li>
             <li><a href="/foods/new">Add New Dish</a></li>
             <li><a href="/mealplans/new">Create a Meal Plan</a></li>
             <li><a href="/mealplans/">See Your Meal Plans</a></li>
@@ -51,6 +51,5 @@
         <li><a href="/users/new">Sign Up</a></li>
         <li><a href="/sessions/new">Log In</a></li>
     <%}%>
-
   </ul>
 </nav>
