--- a/views/mealplans/index.ejs
+++ b/views/mealplans/index.ejs
@@ -16,10 +16,10 @@
                 let month = date.getMonth()
                 let year = date.getFullYear()
                 let fullDate = (`${month}/${day}/${year}`) %>
-                <h1><a href="/mealplans/<%=plans[i].id%>/edit"><%= fullDate %></a></h1>
+                <h1><a href="/mealplans/<%=plans[i].id%>/<%=i%>/edit"><%= fullDate %></a></h1>
               </div>
-              <form class='form-flex' action="/mealplans?_method=DELETE" method="post">
-                <a href="/mealplans/<%=plans[i].id%>/edit">Edit</a>
+              <form class='form-flex' action="/mealplans/<%=plans[i].id%>?_method=DELETE" method="post">
+                <a href="/mealplans/<%=plans[i].id%>/<%=i%>/edit">Edit</a>
                 <input type="hidden" name="id" value="<%=plans[i].id%>">
                 <input type="submit" value="Delete">
               </form>
@@ -45,7 +45,7 @@
                   <%}%>
                 </div>
               </div>
-              <form class="form" action="/mealplans/note/quick/edit?_method=PUT" method="post">
+              <form class="form" action="/mealplans/note/quick/<%=i%>/edit?_method=PUT" method="post">
                 <input type="hidden" name="id" value="<%=plans[i].id%>">
                 <textarea id="textarea" name="notes"></textarea>
                 <div class="submit">
