--- a/views/mealplans/edit.ejs
+++ b/views/mealplans/edit.ejs
@@ -10,7 +10,7 @@
     <div class="container">
       <div class="add-dish">
         <h1>Edit Your Plan</h1>
-        <form class="new-form" action="/mealplans/<%=plan.id%>?_method=PUT" method="POST">
+        <form class="new-form" action="/mealplans/<%=plan.id%>/<%=index%>?_method=PUT" method="POST">
           <fieldset class="all-info">
             <legend>Details of the Plan</legend>
             <!-- breakfast -->
