--- a/public/styles.css
+++ b/public/styles.css
@@ -352,8 +352,9 @@ nav a:hover {
 }
 
 .body-create-plan {
-  background-image: url(https://i.imgur.com/6Imlz07.jpg);
-  background-size: cover;
+  background-image: url(https://i.imgur.com/HbkZLp8.jpg);
+  /* background-size: cover; */
+  background-size: contain;
 }
 
 .container {
@@ -414,7 +415,7 @@ input[type="submit"] {
 
 input[type="submit"]:hover {
   cursor: pointer;
-  background: var(--green);
+  background: var(--red);
 }
 
 /* input[type="submit-v2"] */
