--- a/public/styles.css
+++ b/public/styles.css
@@ -64,6 +64,7 @@ body {
 .about-text {
   width: 90%;
   margin: 0 auto;
+  font-size: 1.5em;
 }
 
 .about-container p {
@@ -72,6 +73,7 @@ body {
 
 .about-container h1 {
   color: var(--yellow);
+  font-size: 3em
 }
 
 
@@ -116,7 +118,7 @@ nav li {
 nav a {
   text-decoration: none;
   color: var(--yellow);
-  font-size: 1.4em;
+  font-size: 2em;
 }
 
 nav a:hover {
