updated mobile styling

--- a/views/food/about.ejs
+++ b/views/food/about.ejs
@@ -11,7 +11,7 @@
       <h1>About Caju</h1>
       <div class="about-text">
       <p>
-        The name of this app was inspired by a fruit that is ubiqitous in Brazil yet quite rare in the US. If you examine its history in more detail, it becomes clear that it is a symbol of human creativity. The kidney-shaped stem atop this fruit contains inside it the cashew nut, something quite familiar to the English-speaking world. Although toxic when raw, the seed is processed .... During the summer when this fruit is not readily available, Brazilians will make a variety of different products with it: caju juice, frozen pulp, ice cream, cajuina, jam, nut butter, nut cheese
+        The name of this app was inspired by a fruit...e cashew nut, something quite familiar to the English-speaking world. Although toxic when raw, the seed is processed .... During the summer when this fruit is not readily available, Brazilians will make a variety of different products with it: caju juice, frozen pulp, ice cream, cajuina, jam, nut butter, nut cheese
       </p>
       </div>
       <div class="about-images">
