--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Architects+Daughter');
 
+
 :root {
   --yellow: #d5b939;
   --green: #01391d;
@@ -11,7 +12,6 @@
   /* border: 1px solid gold; */
 }
 
-
 body {
   font-family: 'Architects Daughter', cursive;
   margin: 0;
@@ -20,6 +20,7 @@ body {
   /* background-color: #ffffed; */
   position: relative;
 }
+
 
 
 ::-webkit-scrollbar-track {
@@ -43,7 +44,6 @@ body {
 /* ABOUT */
 /* ===== */
 
-
 .about-container {
   color: white;
   margin: 0 auto;
@@ -57,14 +57,13 @@ body {
 }
 
 .about-images {
-  width: 90%;
+  width: 400px;
   margin: 0 auto;
 }
 
 .about-text {
-  width: 90%;
+  width: 400px;
   margin: 0 auto;
-  font-size: 2.5em;
 }
 
 .about-container p {
@@ -73,7 +72,6 @@ body {
 
 .about-container h1 {
   color: var(--yellow);
-  font-size: 4em
 }
 
 
@@ -118,7 +116,7 @@ nav li {
 nav a {
   text-decoration: none;
   color: var(--yellow);
-  font-size: 2.5em;
+  font-size: 1.4em;
 }
 
 nav a:hover {
@@ -587,10 +585,36 @@ h3 {
 
 /* MOBILE */
 
-/* @media (max-width: 735px) {
+@media (max-width: 1125px) {
 
-  form {
-    width: 95%;
+  * {
+    border: 1px solid gold;
   }
 
-} */
+  .index-cards {
+    width: 85%;
+    height: auto;
+  }
+
+  .index-container {
+    margin: 0;
+  }
+
+  .index-img {
+    height: auto;
+  }
+
+  .about-container h1 {
+    font-size: 4em;
+  }
+
+  .about-text {
+    width: 90%;
+  }
+
+  .about-images {
+    width: 90%;
+  }
+
+
+}
