--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,20 +3,20 @@
     <% if (currentUser) {
         if (currentUser.color === 'red') {%>
           <div class="logo">
-            <a href="/foods"><img src="https://i.imgur.com/QZt5TSB.png" alt="logo"></a>
-            <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
+            <img src="https://i.imgur.com/QZt5TSB.png" alt="logo">
+            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <%}
         else if (currentUser.color === 'yellow') { %>
           <div class="logo">
-            <a href="/foods"><img src="https://i.imgur.com/4FYvbih.png" alt="logo"></a>
-            <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
+            <img src="https://i.imgur.com/4FYvbih.png" alt="logo">
+            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <% }
         else if (currentUser.color === 'orange') { %>
           <div class="logo">
-            <a href="/foods"><img src="https://i.imgur.com/ApIaTFJ.png" alt="logo"></a>
-            <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
+            <img src="https://i.imgur.com/ApIaTFJ.png" alt="logo">
+            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <% }
         else {%>
@@ -35,7 +35,7 @@
     <%if (currentUser) {%>
         <li>
           <form action="/sessions?_method=DELETE" method="POST">
-            <input type="submit" value="Log Out">
+            <input class="login" type="submit" value="Log Out">
           </form>
         </li>
         <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
