--- a/views/food/about.ejs
+++ b/views/food/about.ejs
@@ -7,15 +7,15 @@
   </head>
   <body class="about">
     <%- include ('../partials/nav.ejs') %>
+    <h1>About Caju</h1>
     <div class="about-container">
-      <h1>About Caju</h1>
       <div class="about-text">
       <p>
-        The name of this app was inspired by a fruit...e cashew nut, something quite familiar to the English-speaking world. Although toxic when raw, the seed is processed .... During the summer when this fruit is not readily available, Brazilians will make a variety of different products with it: caju juice, frozen pulp, ice cream, cajuina, jam, nut butter, nut cheese
+        The name of this app was inspired by a fruit native to the Northeast of Brazil. Although not the most pleasant fruit when eaten raw, a little human ingenuity is all it takes to make this oen of the most..... The purpose of this app is to inspire you to use that same ingenuity in cataloguing your favorite foods, dishes, ingredients, and recipes, and to craft mealplans around your new discoveries.
       </p>
       </div>
       <div class="about-images">
-        <img src="https://i.imgur.com/azpS4U2.jpg" alt="caju_tree_painting">
+        <img src="https://i.imgur.com/azpS4U2.jpg" alt="caju_image">
       </div>
     </div>
   </body>
