--- a/views/mealplans/index.ejs
+++ b/views/mealplans/index.ejs
@@ -7,6 +7,7 @@
   </head>
   <body class="plans-body">
     <%- include ('../partials/nav.ejs') %>
+    <h1>Mealplans</h1>
     <div class="plan-index-container">
         <% for (let i = 0; i < plans.length; i++) { %>
             <div class="plan-index-card">
