--- a/views/users/new.ejs
+++ b/views/users/new.ejs
@@ -17,7 +17,7 @@
         <input type="password" name="password">
         <label for="name">Name:</label>
         <input type="text" name="name">
-        <label for="color">Pick a Color:</label>
+        <label for="color">Pick a caju:</label>
         <select name="color">
           <option>red</option>
           <option>yellow</option>
