--- a/public/styles.css
+++ b/public/styles.css
@@ -634,6 +634,10 @@ h4 {
     background-position: center;
   }
 
+  .new-user {
+    background-position: center;
+  }
+
   .index-cards {
     width: 85%;
     height: auto;
@@ -691,9 +695,14 @@ h4 {
     font-size: 5em;
   }
 
+  h4 {
+    font-size: 2em;
+  }
+
   input[type=submit] {
     font-size: 3em;
-    height: 150px;
+    height: 130px;
+    margin-top: 150px;
   }
 
   select {
@@ -708,5 +717,9 @@ h4 {
   .logo img {
     width: 40%;
   } */
+
+  .display {
+    width: 45%;
+  }
 
 }
