--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -3,31 +3,31 @@
     <% if (currentUser) {
         if (currentUser.color === 'red') {%>
           <div class="logo">
-            <img src="https://i.imgur.com/QZt5TSB.png" alt="logo">
+            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
             <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <%}
         else if (currentUser.color === 'yellow') { %>
           <div class="logo">
-            <img src="https://i.imgur.com/4FYvbih.png" alt="logo">
+            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
             <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <% }
         else if (currentUser.color === 'orange') { %>
           <div class="logo">
-            <img src="https://i.imgur.com/ApIaTFJ.png" alt="logo">
+            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
             <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
           </div>
         <% }
         else {%>
           <div class="logo">
-            <img src="https://i.imgur.com/4FYvbih.png" alt="logo">
+            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
             <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
           </div>
         <%}%>
     <%} else {%>
       <div class="logo">
-        <img src="https://i.imgur.com/4FYvbih.png" alt="logo">
+        <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
         <h1><a href="/foods">Caju</a></h1>
       </div>
       <%}%>
