--- a/views/mealplans/new.ejs
+++ b/views/mealplans/new.ejs
@@ -33,7 +33,7 @@
             <% } %>
           </select>
           <!-- submit form -->
-          <input type="submit" value="CREATE NEW MEAL PLAN">
+          <input type="submit" value="CREATE MEAL PLAN">
         </fieldset>
       </form>
     </div>
