--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -1,55 +1,55 @@
-<nav>
-    <script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
-    <% if (currentUser) {
-        if (currentUser.color === 'red') {%>
-          <div class="logo">
-            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
-          </div>
-        <%}
-        else if (currentUser.color === 'yellow') { %>
-          <div class="logo">
-            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
-          </div>
-        <% }
-        else if (currentUser.color === 'orange') { %>
-          <div class="logo">
-            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-            <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
-          </div>
-        <% }
-        else {%>
-          <div class="logo">
-            <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-            <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
-          </div>
+<script src="https://unpkg.com/ionicons@5.0.0/dist/ionicons.js"></script>
+    <nav>
+      <% if (currentUser) {
+          if (currentUser.color === 'red') {%>
+            <div class="logo">
+              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
+            </div>
+          <%}
+          else if (currentUser.color === 'yellow') { %>
+            <div class="logo">
+              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
+            </div>
+          <% }
+          else if (currentUser.color === 'orange') { %>
+            <div class="logo">
+              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <a href="/foods">Welcome to Caju, <%=currentUser.name%></a>
+            </div>
+          <% }
+          else {%>
+            <div class="logo">
+              <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+              <h1><a href="/foods">Welcome to Caju, <%=currentUser.name%></a></h1>
+            </div>
+          <%}%>
+      <%} else {%>
+        <div class="logo">
+          <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
+          <a href="/foods">Caju</a>
+        </div>
         <%}%>
-    <%} else {%>
-      <div class="logo">
-        <img src="https://i.imgur.com/BiCGE2h.png" alt="logo">
-        <h1><a href="/foods">Caju</a></h1>
-      </div>
+    <ul>
+      <%if (currentUser) {%>
+        <li>
+          <form class='nav-form' action="/sessions?_method=DELETE" method="POST">
+            <input class="login" type="submit" value="Log Out">
+          </form>
+        </li>
+        <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
+          <ul class=dropdown-content>
+            <li><a href="/foods/about/caju/app">About Caju</a></li>
+            <li><a href="/foods/new">Add New Dish</a></li>
+            <li><a href="/mealplans/new">Create a Meal Plan</a></li>
+            <li><a href="/mealplans/">See Your Meal Plans</a></li>
+          </ul>
+        </li>
+      <%}
+        else {%>
+          <li><a href="/users/new">Sign Up</a></li>
+          <li><a href="/sessions/new">Log In</a></li>
       <%}%>
-  <ul>
-    <%if (currentUser) {%>
-      <li>
-        <form action="/sessions?_method=DELETE" method="POST">
-          <input class="login" type="submit" value="Log Out">
-        </form>
-      </li>
-      <li class=dropdown><ion-icon id="menu" name="menu-outline"></ion-icon>
-        <ul class=dropdown-content>
-          <li><a href="/foods/about/caju/app">About Caju</a></li>
-          <li><a href="/foods/new">Add New Dish</a></li>
-          <li><a href="/mealplans/new">Create a Meal Plan</a></li>
-          <li><a href="/mealplans/">See Your Meal Plans</a></li>
-        </ul>
-      </li>
-    <%}
-      else {%>
-        <li><a href="/users/new">Sign Up</a></li>
-        <li><a href="/sessions/new">Log In</a></li>
-    <%}%>
-  </ul>
-</nav>
+    </ul>
+    </nav>
