--- a/views/food/about.ejs
+++ b/views/food/about.ejs
@@ -11,7 +11,7 @@
     <div class="about-container">
       <div class="about-text">
       <p>
-        The name of this app was inspired by a fruit native to the Northeast of Brazil. Although not the most pleasant fruit when eaten raw, a little human ingenuity is all it takes to make this oen of the most..... The purpose of this app is to inspire you to use that same ingenuity in cataloguing your favorite foods, dishes, ingredients, and recipes, and to craft mealplans around your new discoveries.
+        The name of this app was inspired by a fruit native to the tropical climes of Northeastern Brazil. Although not the most pleasant fruit when eaten raw, a little human ingenuity is all it takes to make this one of the most interesting, delicious, and beautiful fruits of the world. The purpose of this app is to inspire you to use that same ingenuity in cataloguing your favorite foods, dishes, ingredients, and recipes, and to craft mealplans around your new discoveries.
       </p>
       </div>
       <div class="about-images">
